# spot-instance-utility

./: LICENSE  README.md  spot-instance-utility.cabal
src/: Main.hs
src/Web/SIU/: Analysis.hs  CLI.hs  History.hs  Types.hs  Utils.hs
src/Web/SIU/Analysis/: Internal.hs
test/: Main.hs
test/Web/SIU/Tests/: Arbitrary.hs  Types.hs  Utils.hs
test/Web/SIU/Tests/Analysis/: Internal.hs
